--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,33 @@ body {
   background: white;
   border-radius: 50px;
   display: inline-block;
+  transition: all 0.3s;
+  position: relative;
+}
+.btn:hover {
+  transform: translateY(-4px);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.3);
+}
+.btn:hover::after {
+  transform: scaleX(1.5) scaleY(1.7);
+  opacity: 0;
+}
+.btn:active {
+  transform: translateY(-2px);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2);
+}
+.btn::after {
+  content: "";
+  background: white;
+  width: 100%;
+  height: 100%;
+  border-radius: 50px;
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all 0.4s;
 }
 
 @keyframes LeftToRight {
