--- a/sass/style.sass
+++ b/sass/style.sass
@@ -67,7 +67,29 @@ body
         background: white
         border-radius: 50px
         display: inline-block
-        
+        transition: all .3s
+        position: relative
+    &:hover
+        transform: translateY(-4px)
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.3)
+        &::after
+            transform: scaleX(1.5) scaleY(1.7)
+            opacity: 0
+    &:active
+        transform: translateY(-2px)
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2)
+    &::after
+        content: ""
+        background: white
+        width: 100%
+        height: 100%
+        border-radius: 50px
+        display: inline-block
+        position: absolute
+        top: 0
+        left: 0
+        z-index: -1
+        transition: all .4s
 @keyframes LeftToRight
     0%
         opacity: 0
