--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,10 @@ body {
   z-index: -1;
   transition: all 0.4s;
 }
+.btn_animated {
+  animation: BtnToUp 0.5s ease-out 0.7s;
+  animation-fill-mode: backwards;
+}
 
 @keyframes LeftToRight {
   0% {
@@ -132,5 +136,15 @@ body {
   100% {
     opacity: 1;
     transform: translateX(0px);
+  }
+}
+@keyframes BtnToUp {
+  0% {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
   }
 }/*# sourceMappingURL=style.css.map */
