--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,15 +1,17 @@
-*
+*, ::after, ::before
     margin: 0
     padding: 0
     box-sizing: border-box
+html
+    font-size: 62.5%
 
 body
     font-family: "Roboto", sans-serif
     font-weight: 400
     color: #777777
-    font-size: 16px
-    letter-spacing: 2px
-    padding: 50px
+    font-size: 1.6rem
+    letter-spacing: .2rem
+    padding: 5rem
     background-color: white
 .container
     background-color: #F7F7F7
@@ -20,10 +22,10 @@ body
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%)
     &__logo
         position: absolute
-        left: 50px
-        top: 50px
-        height: 70px
-        width: 56px
+        left: 5rem
+        top: 5rem
+        height: 7rem
+        width: 5.6rem
     &__box
         position: absolute
         top: 40%
@@ -35,12 +37,12 @@ body
     color: #FFFFFF
     &__main
         display: block
-        font-size: 50px
+        font-size: 5rem
         font-weight: 800
-        line-height: 60px
-        letter-spacing: 10px
+        line-height: 6rem
+        letter-spacing: 1rem
         text-transform: uppercase
-        margin-bottom: 10px
+        margin-bottom: 1rem
         animation-name: LeftToRight
         animation-duration: 1.7s
         animation-delay: 1s
@@ -48,42 +50,43 @@ body
         backface-visibility: hidden
     &__secondary
         display: block
-        font-size: 40px
+        font-size: 4rem
         font-weight: 100
-        line-height: 48px
-        letter-spacing: 5px
+        line-height: 4.8rem
+        letter-spacing: .5rem
         animation-name: RightToLeft
         animation-duration: 1.7s
         animation-delay: 1s
         animation-timing-function: ease
         backface-visibility: hidden
-        margin-bottom: 65px
+        margin-bottom: 6.5rem
 .btn
     &:link, &:visited
         text-transform: uppercase
         text-decoration: none
         color: #777777
-        padding: 15px 40px
+        padding: 1.5rem 4rem
         background: white
-        border-radius: 50px
+        border-radius: 5rem
         display: inline-block
         transition: all .3s
         position: relative
+        font-size: 2rem
     &:hover
-        transform: translateY(-4px)
-        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.3)
+        transform: translateY(-.4rem)
+        box-shadow: 0rem .4rem .4rem 0rem rgba(0, 0, 0, 0.3)
         &::after
             transform: scaleX(1.5) scaleY(1.7)
             opacity: 0
     &:active
-        transform: translateY(-2px)
-        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2)
+        transform: translateY(-.2rem)
+        box-shadow: 0rem .4rem .4rem 0rem rgba(0, 0, 0, 0.2)
     &::after
         content: ""
         background: white
         width: 100%
         height: 100%
-        border-radius: 50px
+        border-radius: 5rem
         display: inline-block
         position: absolute
         top: 0
@@ -97,25 +100,25 @@ body
 @keyframes LeftToRight
     0%
         opacity: 0
-        transform: translateX(-100px)
+        transform: translateX(-10rem)
     80%
-        transform: translateX(10px)
+        transform: translateX(1rem)
     100%
         opacity: 1
-        transform: translateX(0px)
+        transform: translateX(0rem)
 @keyframes RightToLeft
     0%
         opacity: 0
-        transform: translateX(100px)
+        transform: translateX(10rem)
     80%
-        transform: translateX(-10px)
+        transform: translateX(-1rem)
     100%
         opacity: 1
-        transform: translateX(0px)
+        transform: translateX(0rem)
 @keyframes BtnToUp
     0%
         opacity: 0
-        transform: translateY(50px)
+        transform: translateY(5rem)
     100%
         opacity: 1
-        transform: translateY(0px)
+        transform: translateY(0rem)
