--- a/css/style.css
+++ b/css/style.css
@@ -1,86 +1,46 @@
-*, ::after, ::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+@keyframes LeftToRight {
+  0% {
+    opacity: 0;
+    transform: translateX(-10rem);
+  }
+  80% {
+    transform: translateX(1rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0rem);
+  }
 }
-
-html {
-  font-size: 62.5%;
+@keyframes RightToLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(10rem);
+  }
+  80% {
+    transform: translateX(-1rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0rem);
+  }
 }
-
-body {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  color: #777777;
-  font-size: 1.6rem;
-  letter-spacing: 0.2rem;
-  padding: 5rem;
-  background-color: white;
+@keyframes BtnToUp {
+  0% {
+    opacity: 0;
+    transform: translateY(5rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0rem);
+  }
 }
-
-.container {
-  background-color: #F7F7F7;
-}
-
-.header {
-  position: relative;
-  height: 95vh;
-  background: linear-gradient(90deg, rgba(186, 133, 84, 0.7) 0%, rgba(1, 1, 1, 0.7) 100%), url(../img/header-background.jpg) center/cover no-repeat;
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%);
-}
-.header__logo {
-  position: absolute;
-  left: 5rem;
-  top: 5rem;
-  height: 7rem;
-  width: 5.6rem;
-}
-.header__box {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100%;
-  text-align: center;
-}
-
-.title-first {
-  color: #FFFFFF;
-}
-.title-first__main {
-  display: block;
-  font-size: 5rem;
-  font-weight: 800;
-  line-height: 6rem;
-  letter-spacing: 1rem;
-  text-transform: uppercase;
-  margin-bottom: 1rem;
-  animation-name: LeftToRight;
-  animation-duration: 1.7s;
-  animation-delay: 1s;
-  animation-timing-function: ease;
-  backface-visibility: hidden;
-}
-.title-first__secondary {
-  display: block;
-  font-size: 4rem;
-  font-weight: 100;
-  line-height: 4.8rem;
-  letter-spacing: 0.5rem;
-  animation-name: RightToLeft;
-  animation-duration: 1.7s;
-  animation-delay: 1s;
-  animation-timing-function: ease;
-  backface-visibility: hidden;
-  margin-bottom: 6.5rem;
-}
-
 .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
   color: #777777;
+  display: inline-block;
   padding: 1.5rem 4rem;
-  background: white;
+  background: #ffffff;
   border-radius: 5rem;
   display: inline-block;
   transition: all 0.3s;
@@ -97,11 +57,11 @@ body {
 }
 .btn:active {
   transform: translateY(-0.2rem);
-  box-shadow: 0rem 0.4rem 0.4rem 0rem rgba(0, 0, 0, 0.2);
+  box-shadow: 0rem 0.4rem 0.4rem 0rem rgba(0, 0, 0, 0.3);
 }
 .btn::after {
   content: "";
-  background: white;
+  background: #ffffff;
   width: 100%;
   height: 100%;
   border-radius: 5rem;
@@ -152,4 +112,83 @@ body {
     opacity: 1;
     transform: translateY(0rem);
   }
+}
+*, ::after, ::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  padding: 5rem;
+  background-color: #ffffff;
+}
+
+.container {
+  background-color: #ffffff;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  color: #777777;
+  font-size: 1.6rem;
+  letter-spacing: 0.2rem;
+}
+
+.title-first {
+  color: #ffffff;
+}
+.title-first__main {
+  display: block;
+  font-size: 5rem;
+  font-weight: 800;
+  line-height: 6rem;
+  letter-spacing: 1rem;
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+  animation-name: LeftToRight;
+  animation-duration: 1.7s;
+  animation-delay: 1s;
+  animation-timing-function: ease;
+  backface-visibility: hidden;
+}
+.title-first__secondary {
+  display: block;
+  font-size: 4rem;
+  font-weight: 100;
+  line-height: 4.8rem;
+  letter-spacing: 0.5rem;
+  animation-name: RightToLeft;
+  animation-duration: 1.7s;
+  animation-delay: 1s;
+  animation-timing-function: ease;
+  backface-visibility: hidden;
+  margin-bottom: 6.5rem;
+}
+
+.header {
+  position: relative;
+  height: 95vh;
+  background: linear-gradient(90deg, rgba(186, 133, 84, 0.7) 0%, rgba(0, 0, 0, 0.7) 100%), url(../img/header-background.jpg) center/cover no-repeat;
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%);
+}
+.header__logo {
+  position: absolute;
+  left: 5rem;
+  top: 5rem;
+  height: 7rem;
+  width: 5.6rem;
+}
+.header__box {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  text-align: center;
 }/*# sourceMappingURL=style.css.map */
