--- a/sass/style.sass
+++ b/sass/style.sass
@@ -7,6 +7,7 @@
 @import "base/base.sass"
 @import "base/typography.sass"
 @import "base/utilities.sass"
+@import "layout/grid.sass"
 @import "layout/header.sass"
 @import "pages/home.sass"
     
