--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,23 @@ body {
   margin-bottom: 6.5rem;
 }
 
+.row {
+  max-width: 114rem;
+  background: #b87777;
+  margin: 0 auto;
+}
+.row:not(:last-child) {
+  margin-bottom: 8rem;
+}
+
+.col-1-of-2 {
+  width: calc((100% - 6rem) / 2);
+  background: rgba(24, 172, 56, 0.4666666667);
+}
+.col-1-of-2:not(:last-child) {
+  margin-right: 6rem;
+}
+
 .header {
   position: relative;
   height: 95vh;
