--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,49 @@
   animation-fill-mode: backwards;
 }
 
+.btn-text:link, .btn-text:visited {
+  font-size: 1.6rem;
+  letter-spacing: 0.2rem;
+  font-weight: 700;
+  color: #BA8554;
+  text-decoration: none;
+  padding: 1rem;
+  border-bottom: 1px #BA8554 solid;
+  display: inline-block;
+  transition: 0.5s all;
+}
+.btn-text:hover {
+  background-color: #BA8554;
+  color: #ffffff;
+  box-shadow: 0rem 0.4rem 0.4rem 0rem rgba(0, 0, 0, 0.3);
+  transform: translateY(-0.2rem);
+}
+.btn-text:active {
+  transform: translateX(0);
+}
+
+.composition {
+  position: relative;
+}
+.composition__photo {
+  width: 55%;
+  box-shadow: 0rem 0.4rem 0.4rem 0rem rgba(0, 0, 0, 0.3);
+  border-radius: 0.5rem;
+  position: absolute;
+}
+.composition__photo_n1 {
+  top: 0;
+  left: 0rem;
+}
+.composition__photo_n2 {
+  top: 2rem;
+  right: 0rem;
+}
+.composition__photo_n3 {
+  top: 13rem;
+  left: 10rem;
+}
+
 @keyframes LeftToRight {
   0% {
     opacity: 0;
@@ -171,21 +214,98 @@ body {
   margin-bottom: 6.5rem;
 }
 
+.title-secondary {
+  font-size: 3.6rem;
+  letter-spacing: 1rem;
+  text-transform: uppercase;
+  font-weight: 800;
+  background: linear-gradient(90deg, rgba(186, 133, 84, 0.7) 0%, rgba(161, 79, 3, 0.7) 100%);
+  -webkit-background-clip: text;
+  color: transparent;
+  transition: all 0.4s;
+  backface-visibility: hidden;
+}
+.title-secondary:hover {
+  transform: skewY(2deg) skewX(15deg) scale(1.1);
+  text-shadow: 0rem 0.4rem 0.4rem rgba(0, 0, 0, 0.25);
+}
+
+.title-third {
+  font-size: 2rem;
+  letter-spacing: 0.2rem;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.paragraph {
+  font-size: 1.6rem;
+  letter-spacing: 0.2rem;
+  text-transform: 140%;
+  font-weight: 400;
+}
+
+.text-align-center {
+  text-align: center;
+}
+
+.margin-bottom-10px {
+  margin-bottom: 1rem;
+}
+
+.margin-bottom-30px {
+  margin-bottom: 3rem;
+}
+
+.margin-bottom-50px {
+  margin-bottom: 5rem;
+}
+
+.margin-bottom-80px {
+  margin-bottom: 8rem;
+}
+
 .row {
   max-width: 114rem;
-  background: #b87777;
   margin: 0 auto;
 }
 .row:not(:last-child) {
   margin-bottom: 8rem;
 }
+.row::after {
+  content: "";
+  display: table;
+  clear: both;
+}
 
 .col-1-of-2 {
-  width: calc((100% - 6rem) / 2);
-  background: rgba(24, 172, 56, 0.4666666667);
+  width: calc((100% - 8rem) / 2);
 }
-.col-1-of-2:not(:last-child) {
-  margin-right: 6rem;
+
+.col-1-of-3 {
+  width: calc((100% - 2 * 8rem) / 3);
+}
+
+.col-2-of-3 {
+  width: calc(2 * ((100% - 2 * 8rem) / 3 ) + 8rem);
+}
+
+.col-1-of-4 {
+  width: calc((100% - 3 * 8rem) / 4);
+}
+
+.col-2-of-4 {
+  width: calc(2 * ((100% - 3 * 8rem) / 4 ) + 8rem);
+}
+
+.col-3-of-4 {
+  width: calc(3 * ((100% - 3 * 8rem) / 4 ) + 2 * 8rem );
+}
+
+[class^=col-] {
+  float: left;
+}
+[class^=col-]:not(:last-child) {
+  margin-right: 8rem;
 }
 
 .header {
@@ -208,4 +328,8 @@ body {
   transform: translate(-50%, -50%);
   width: 100%;
   text-align: center;
+}
+
+.section-about {
+  padding-top: 8rem;
 }/*# sourceMappingURL=style.css.map */
