--- a/sass/abstracts/_mixins.sass
+++ b/sass/abstracts/_mixins.sass
@@ -3,3 +3,11 @@
     text-decoration: none
     color: $color
     display: inline-block
+@mixin clearfix
+    &::after
+        content: ""
+        display: table
+        clear: both
+
+
+    
