--- a/sass/abstracts/_variable.sass
+++ b/sass/abstracts/_variable.sass
@@ -10,6 +10,12 @@ $color-black: #000000
 $color-white: #ffffff
 //Тень для кнопок
 $box-shadow: 0rem .4rem .4rem 0rem rgba(0, 0, 0, 0.3)
+$shadov-h2: 0rem .4rem .4rem rgba($color-black, .25)
+//Отступы
 $margin-vertical-big: 8rem
 $grid-widht: 114rem
-$gutter-horizontal: 6rem
+$gutter-horizontal: 8rem
+//Типографика
+$font-size-paragraph: 1.6rem
+$font-size-paragraph-h2: 3.6rem
+$font-size-paragraph-h3: 2rem
