--- a/sass/base/_typography.sass
+++ b/sass/base/_typography.sass
@@ -2,7 +2,7 @@ body
     font-family: "Roboto", sans-serif
     font-weight: 400
     color: $color-gray
-    font-size: 1.6rem
+    font-size: $font-size-paragraph
     letter-spacing: .2rem
 .title-first
     color: $color-white
@@ -31,3 +31,27 @@ body
         animation-timing-function: ease
         backface-visibility: hidden
         margin-bottom: 6.5rem
+.title-secondary
+    
+    font-size: $font-size-paragraph-h2
+    letter-spacing: 1rem
+    text-transform: uppercase
+    font-weight: 800
+    background: linear-gradient(90deg, rgba($color-brown-light, 0.70) 0%, rgba($color-brown-dark, 0.70) 100%)
+    -webkit-background-clip: text
+    color: transparent
+    transition: all .4s
+    backface-visibility: hidden
+    &:hover
+        transform: skewY(2deg) skewX(15deg) scale(1.1)
+        text-shadow: $shadov-h2
+.title-third
+    font-size: $font-size-paragraph-h3
+    letter-spacing: .2rem
+    text-transform: uppercase
+    font-weight: 700
+.paragraph
+    font-size: $font-size-paragraph
+    letter-spacing: .2rem
+    text-transform: 140%
+    font-weight: 400
