--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3,6 +3,8 @@
 @import "abstracts/functions.sass"
 @import "base/animation.sass"
 @import "components/button.sass"
+@import "components/button-text.sass"
+@import "components/components.sass"
 @import "base/animation.sass"
 @import "base/base.sass"
 @import "base/typography.sass"
