--- a/sass/style.sass
+++ b/sass/style.sass
@@ -5,6 +5,8 @@
 @import "components/button.sass"
 @import "components/button-text.sass"
 @import "components/components.sass"
+@import "components/adventure-card.sass"
+@import "components/tour-card.sass"    
 @import "base/animation.sass"
 @import "base/base.sass"
 @import "base/typography.sass"
