--- a/sass/pages/_home.sass
+++ b/sass/pages/_home.sass
@@ -1,2 +1,13 @@
 .section-about
     padding-top: 8rem
+    padding-bottom: 15.4rem
+.section-adventure
+    padding: 21rem 0
+    background: linear-gradient(90deg, rgba($color-brown-light, 0.70) 0%, rgba($color-black, 0.70) 100%), url(../img/section-adventure.jpg) center / cover no-repeat
+    transform: skewY(7deg)
+    & > *
+        transform: skewY(-7deg) 
+.section-tour
+    padding-top: 21rem 
+
+
