--- a/sass/base/_base.sass
+++ b/sass/base/_base.sass
@@ -9,4 +9,4 @@ body
     padding: 5rem
     background-color: $color-white
 .container
-    background-color: $color-white
+    background-color: #E5E5E5
