--- a/css/style.css
+++ b/css/style.css
@@ -165,10 +165,13 @@
   left: 0;
   width: 100%;
   backface-visibility: hidden;
+  box-shadow: 0rem 0.4rem 0.4rem 0rem rgba(0, 0, 0, 0.3);
+  border-radius: 0.5rem;
+  overflow: hidden;
 }
 .card-tour__side_back {
   transform: rotateY(180deg);
-  background: linear-gradient(120deg, rgba(186, 133, 84, 0.7) 0%, rgba(161, 79, 3, 0.7) 100%);
+  background: linear-gradient(120deg, #BA8554, #A14F03);
 }
 .card-tour:hover .card-tour__side_front {
   transform: rotateY(-180deg);
@@ -178,9 +181,77 @@
 }
 .card-tour__img {
   background-blend-mode: hard-light;
-  height: 20rem;
+  height: 21rem;
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%);
+}
+.card-tour__img_1 {
   background: #BA8554 url(../img/card-1.jpg) center/cover no-repeat;
 }
+.card-tour__img_2 {
+  background: #BA8554 url(../img/card-2.jpg) center/cover no-repeat;
+}
+.card-tour__img_3 {
+  background: #BA8554 url(../img/card-3.jpg) center/cover no-repeat;
+}
+.card-tour__title {
+  font-size: 2.8rem;
+  letter-spacing: 0.2rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  text-align: right;
+  position: absolute;
+  top: 17rem;
+  right: 0rem;
+}
+.card-tour__span {
+  background: linear-gradient(90deg, #BA8554, #A14F03);
+  padding: 1rem 2rem 0.3rem 2rem;
+}
+.card-tour__span_2 {
+  position: absolute;
+  top: 3.4rem;
+  right: 0;
+  padding-bottom: 1rem;
+  padding-top: 0rem;
+}
+.card-tour__descr ul {
+  list-style: none;
+  margin: 0 auto;
+  width: 75%;
+  text-align: center;
+}
+.card-tour__descr ul li {
+  font-size: 1.6rem;
+  letter-spacing: 0.2rem;
+  color: #777777;
+  border-bottom: 0.1rem solid #777777;
+  display: inline-block;
+}
+.card-tour__descr ul li:not(:last-child) {
+  margin-bottom: 2rem;
+}
+.card-tour__backSide-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.card-tour__text {
+  margin-bottom: 8rem;
+  letter-spacing: 0.2rem;
+  text-transform: uppercase;
+  text-align: center;
+  color: #ffffff;
+}
+.card-tour__text_1 {
+  font-size: 1.6rem;
+  font-weight: 300;
+}
+.card-tour__text_2 {
+  font-size: 6rem;
+  font-weight: 400;
+}
+
 @keyframes LeftToRight {
   0% {
     opacity: 0;
@@ -233,7 +304,7 @@ body {
 }
 
 .container {
-  background-color: #ffffff;
+  background-color: #E5E5E5;
 }
 
 body {
@@ -274,6 +345,9 @@ body {
   backface-visibility: hidden;
   margin-bottom: 6.5rem;
 }
+.title-first__secondary__white {
+  background-color: #ffffff;
+}
 
 .title-secondary {
   font-size: 3.6rem;
@@ -289,6 +363,9 @@ body {
 .title-secondary:hover {
   transform: skewY(2deg) skewX(15deg) scale(1.1);
   text-shadow: 0rem 0.4rem 0.4rem rgba(0, 0, 0, 0.25);
+}
+.title-secondary_white {
+  color: #ffffff;
 }
 
 .title-third {
@@ -393,7 +470,7 @@ body {
 
 .section-about {
   padding-top: 8rem;
-  padding-bottom: 15.4rem;
+  padding-bottom: 20rem;
 }
 
 .section-adventure {
@@ -407,4 +484,9 @@ body {
 
 .section-tour {
   padding-top: 21rem;
+}
+
+.section-feedBack {
+  padding-top: 8rem;
+  margin-bottom: 8 rem;
 }/*# sourceMappingURL=style.css.map */
