--- a/sass/pages/_home.sass
+++ b/sass/pages/_home.sass
@@ -9,8 +9,13 @@
         transform: skewY(-7deg) 
 .section-tour
     padding-top: 21rem 
+    padding-bottom: 8rem
 .section-feedBack
-    padding-top: 8rem
-    margin-bottom: 8 rem
+    padding: 8rem 0rem
+    
+    position: relative
+.section-book
+    padding: 10rem
+    background: linear-gradient(90deg, $color-brown-light, $color-brown-dark)
 
 
