--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,7 +6,10 @@
 @import "components/button-text.sass"
 @import "components/components.sass"
 @import "components/adventure-card.sass"
-@import "components/tour-card.sass"    
+@import "components/tour-card.sass"
+@import "components/feedBack-card.sass"
+@import "components/bg-video.sass"
+@import "components/form.sass"        
 @import "base/animation.sass"
 @import "base/base.sass"
 @import "base/typography.sass"
