--- a/sass/components/_button.sass
+++ b/sass/components/_button.sass
@@ -1,7 +1,7 @@
 
 //Это компонент кнопки
 .btn
-    &:link, &:visited
+    &, &:link, &:visited
         @include style-link ($color-gray)
         padding: 1.5rem 4rem
         background: $color-white
@@ -10,6 +10,7 @@
         transition: all .3s
         position: relative
         font-size: 2rem
+        border: none
     &:hover
         transform: translateY(-.4rem)
         box-shadow: $box-shadow
@@ -34,3 +35,11 @@
     &_animated
         animation: BtnToUp .5s ease-out .7s
         animation-fill-mode: backwards
+.btn_brown
+    &, &:link, &:visited
+        background: $color-brown-dark
+        color: $color-white
+        
+    &:hover  
+    &::after
+        background:$color-brown-dark
