--- a/sass/style.sass
+++ b/sass/style.sass
@@ -16,6 +16,8 @@
 @import "base/utilities.sass"
 @import "layout/grid.sass"
 @import "layout/header.sass"
+@import "layout/footer.sass"
+@import "layout/navigation.sass"
 @import "pages/home.sass"
     
 
