--- a/sass/pages/_home.sass
+++ b/sass/pages/_home.sass
@@ -1,12 +1,19 @@
 .section-about
     padding-top: 8rem
     padding-bottom: 20rem
+    @include respond(tab-land)
+        padding-bottom: 13rem
+    @include respond(tab-port)
+        padding-bottom: 40rem
+
 .section-adventure
     padding: 21rem 0
     background: linear-gradient(90deg, rgba($color-brown-light, 0.70) 0%, rgba($color-black, 0.70) 100%), url(../img/section-adventure.jpg) center / cover no-repeat
     transform: skewY(7deg)
     & > *
-        transform: skewY(-7deg) 
+        transform: skewY(-7deg)
+    @include respond(tab-land)
+        padding: 15rem 0 
 .section-tour
     padding-top: 21rem 
     padding-bottom: 8rem
@@ -17,5 +24,7 @@
 .section-book
     padding: 10rem
     background: linear-gradient(90deg, $color-brown-light, $color-brown-dark)
+    @include respond(tab-port)
+        padding: 4rem
 
 
