--- a/sass/abstracts/_mixins.sass
+++ b/sass/abstracts/_mixins.sass
@@ -10,4 +10,32 @@
         clear: both
 
 
+@mixin phone
+    @media ( max-width: 600px)
+        @content 
+
+        /* В аргумент миксина будем указавать несколько вариантов брейкпоинтов, таких как:
+            -phone
+            -tab-port
+            -tab-land
+            -big-screen
+                 */
+@mixin respond($breakpoint)
+    @if $breakpoint == phone
+        @media only screen and (max-width: 600px)
+            @content
+
+    @if $breakpoint == tab-port
+        @media only screen and (max-width: 900px)
+            @content
+
+    @if $breakpoint == tab-land
+        @media only screen and (max-width: 1240px)
+            @content
+
+    @if $breakpoint == big-screen
+        @media only screen and (min-width: 1800px)
+            @content
     
+
+        
