--- a/sass/base/_utilities.sass
+++ b/sass/base/_utilities.sass
@@ -6,6 +6,10 @@
 .margin-bottom-30px
     margin-bottom: 3rem
 .margin-bottom-50px
-    margin-bottom: 5rem    
+    margin-bottom: 5rem
+    @include respond(tab-port)
+        margin-bottom: 7rem    
 .margin-bottom-80px
     margin-bottom: 8rem
+    @include respond(tab-port)
+        margin-bottom: 5rem
