--- a/sass/components/_tour-card.sass
+++ b/sass/components/_tour-card.sass
@@ -4,6 +4,8 @@
     perspective: 150rem
     -moz-perspective: 150rem
     position: relative
+    @media only screen and (max-width: 900px), (hover:none)
+        height: auto
     
     &__side
         height: 50rem
@@ -17,13 +19,30 @@
         box-shadow: $box-shadow
         border-radius: .5rem
         overflow: hidden
+        @media only screen and (max-width: 900px), (hover:none)
+            height: auto
+            position: relative
         &_front
-
+            @media only screen and (max-width: 900px), (hover:none)
+            padding-bottom: 13rem
         &_back
             transform: rotateY(180deg)
             background: linear-gradient(120deg, $color-brown-light, $color-brown-dark)
+            @media only screen and (max-width: 900px), (hover:none)
+                transform: rotateY(0deg)
+                padding: 5rem
+                clip-path: polygon(0% 30%, 100% 40%, 100% 100%, 0 100%)
+                padding-top: 32rem
+                margin-top: -33rem
+                
+                
+                
+        @include respond(tab-port)
+            height: 73rem
     &:hover &__side_front
         transform: rotateY(-180deg)
+        @include respond(tab-port)
+            transform: rotateY(0deg)
     &:hover &__side_back
         transform: rotateY(0deg)
 
@@ -37,7 +56,8 @@
             background: $color-brown-light url(../img/card-2.jpg) center / cover no-repeat
         &_3
             background: $color-brown-light url(../img/card-3.jpg) center / cover no-repeat
-
+        @media only screen and (max-width: 900px), (hover:none)
+            height: 30rem
     &__title
         font-size: 2.8rem
         letter-spacing: .2rem
@@ -47,6 +67,9 @@
         position: absolute
         top: 17rem
         right: 0rem
+        @include respond(tab-port)
+            top: 25rem
+            font-size: 3.8rem
     &__span
         background: linear-gradient(90deg, $color-brown-light, $color-brown-dark)
         padding: 1rem 2rem 0.3rem 2rem
@@ -57,6 +80,8 @@
             right: 0
             padding-bottom: 1rem
             padding-top: 0rem
+            @include respond(tab-port)
+                top: 4.4rem
     &__descr
         ul
             list-style: none
@@ -71,11 +96,22 @@
                 display: inline-block
                 &:not(:last-child)
                     margin-bottom: 2rem
+                @include respond(tab-land)
+                    font-size: 1.37rem
+                @include respond(tab-port)
+                    font-size: 2.2rem
     &__backSide-box
         position: absolute
         top: 50%
         left: 50%
         transform: translate(-50%, -50%)
+        @media only screen and (max-width: 900px), (hover:none)
+            position: relative
+            top: 0%
+            left: 0%
+            transform: translate(0%, 0%)
+            text-align: center
+            
     &__text
         margin-bottom: 8rem
         letter-spacing: .2rem
