--- a/sass/layout/_navigation.sass
+++ b/sass/layout/_navigation.sass
@@ -12,6 +12,7 @@
         z-index: 200
         text-align: center
         cursor: pointer
+        box-shadow: $box-shadow
     &__background
         width: 6rem
         height: 6rem
@@ -65,12 +66,12 @@
         opacity: 1
     &__icon
         position: relative
-        margin-top: 37px
+        margin-top: 3.7rem
         &,
         &::before,
         &::after
-            width: 30px
-            height: 2px
+            width: 3rem
+            height: .2rem
             background: $color-black
             display: inline-block
         &::before,
@@ -80,14 +81,14 @@
             left: 0
             transition: all .2s
         &::before
-            top: -8px
+            top: -.8rem
 
         &::after
-            top: 8px
+            top: .8rem
     &__button:hover &__icon::before
-        top: -10px
+        top: -1rem
     &__button:hover &__icon::after
-        top: 10px
+        top: 1rem
     &__toggle:checked + &__button &__icon
         background: transparent   
     &__toggle:checked + &__button &__icon::before
