--- a/sass/components/_form.sass
+++ b/sass/components/_form.sass
@@ -63,6 +63,8 @@
         opacity: 0
         visibility: none
         transform: translateY(-3rem)
+        @include respond(tab-port)
+            margin-bottom: 3rem
     &__group-radio
         display: inline-block
         &:not(:last-child)
@@ -71,6 +73,10 @@
             display: block
             &:not(:last-child)
                 margin-bottom: 2rem
+        @include respond(tab-port)
+            display: block
+            &:not(:last-child)
+                margin-bottom: 5rem
 
     &__input-radio
         display: none
